--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
         <div class="container">
             <h1 class="title">Порівняння значення секторів та окремих складових національної еконо́міки Украї́ни з Польшею</h1>
             <ul class="list comparison-title-ul">
-                <li class="item"><p class="low-hight">Найменш розвинений сектор: третинний</p></li>
-                <li class="item"><p class="low-hight">Найбільше розвинений сектор: вторинний</p></li>
+                <li class="item"><p class="low-hight">Найменш розвинений сектор: вторинний</p></li>
+                <li class="item"><p class="low-hight">Найбільше розвинений сектор: третинний</p></li>
             </ul>
         </div>
     </section>
